--- a/src/Presentation/IMS.App/App.xaml
+++ b/src/Presentation/IMS.App/App.xaml
@@ -1,13 +1,9 @@
-<Application x:Class="IMS.WPF"
+<Application x:Class="IMS.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:IMS"
-             StartupUri="MainWindow.xaml">
+             xmlns:local="clr-namespace:IMS" 
+           >
     <Application.Resources>
-        <ResourceDictionary>
-            <ResourceDictionary.MergedDictionaries>
-                <ResourceDictionary Source="/Styles/Styles.xaml"/>
-            </ResourceDictionary.MergedDictionaries>
-        </ResourceDictionary>
+
     </Application.Resources>
 </Application>
